--- a/code/_bookdown.yml
+++ b/code/_bookdown.yml
@@ -2,4 +2,7 @@ delete_merged_file: true
 new_session: yes
 output_dir: "../docs"
 rmd_files: [
-  "index.Rmd"]
+  "index.Rmd",
+  "Anaconda_Installation.Rmd",
+  "Hello_World.Rmd",
+  "Basic_Data_Types.Rmd"]
